<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"/>

    <TextView
        android:id="@+id/sound_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="8dp"
        android:text="@string/sound"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/stereo_switch"
        android:theme="@style/AppTheme"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:gravity="start"
        android:text="@string/stereo"
        android:onClick="switchStereo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sound_title" />
    
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/bedroom_speakers"
        android:theme="@style/AppTheme"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:gravity="start"
        android:onClick="toggleBedroomSpeakers"
        android:text="@string/bedroom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stereo_switch" />
    
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/living_room_speakers"
        android:theme="@style/AppTheme"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:gravity="start"
        android:text="@string/living_room"
        android:onClick="toggleLivingRoomSpeakers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bedroom_speakers" />

    <ImageView
        android:id="@+id/volume_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_d7e439873663de4a6085f538d3ab09df__1_"
        app:layout_constraintTop_toBottomOf="@+id/living_room_speakers"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/speaker_icon" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/volume"
        android:layout_width="315dp"
        android:layout_height="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:max="63"
        android:theme="@style/AppTheme"
        app:layout_constraintStart_toEndOf="@+id/volume_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/volume_icon"
        app:layout_constraintBottom_toBottomOf="@+id/volume_icon" />

    <HorizontalScrollView
        android:id="@+id/stations"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/volume_icon">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="88dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/classic"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:onClick="classic"
                app:srcCompat="@drawable/classic_fm" />


            <ImageView
                android:id="@+id/bbc2"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:onClick="bbc2"
                app:srcCompat="@drawable/radio_2_logo" />

            <ImageView
                android:id="@+id/bbc_bristol"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:onClick="bbcBristol"
                app:srcCompat="@drawable/bbc_bristol_logo" />

            <ImageView
                android:id="@+id/bbc6"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:onClick="bbc6"
                app:srcCompat="@drawable/bbc_icon" />

            <ImageView
                android:id="@+id/spotify"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:onClick="toggleSpotify"
                app:srcCompat="@drawable/spotify_logo_png_7053" />

        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/lights_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/lights"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stations" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/bedroom_lights"
        android:theme="@style/AppTheme"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        android:gravity="start"
        android:onClick="bedroomLights"
        android:text="@string/bedroom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lights_title" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/living_room_lights"
        android:theme="@style/AppTheme"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:gravity="start"
        android:onClick="livingRoomLights"
        android:text="@string/living_room"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bedroom_lights" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/office_lights"
        android:theme="@style/AppTheme"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:gravity="start"
        android:onClick="officeLights"
        android:text="@string/office"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/living_room_lights" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/kitchen_lights"
        android:theme="@style/AppTheme"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:gravity="start"
        android:onClick="kitchenLights"
        android:text="@string/kitchen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/office_lights" />

    <androidx.appcompat.widget.SwitchCompat
        android:theme="@style/AppTheme"
        android:id="@+id/party_mode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:gravity="start"
        android:onClick="partyMode"
        android:text="@string/party_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kitchen_lights" />

    <Button
        android:id="@+id/choose_time_weekday"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:onClick="setMFAlarm"
        android:text="@string/weekday_alarm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alarms" />

    <Button
        android:id="@+id/clear_time_weekday"
        android:layout_width="36dp"
        android:layout_height="39dp"
        android:layout_marginEnd="16dp"
        android:onClick="clearMFAlarm"
        android:text="@string/x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alarms" />

    <TextView
        android:id="@+id/weekday_time"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:gravity="center"
        android:text="@string/default_weekday_time"
        app:layout_constraintRight_toLeftOf="@+id/clear_time_weekday"
        app:layout_constraintTop_toBottomOf="@+id/alarms" />

    <Button
        android:id="@+id/choose_time_weekend"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:onClick="setSSAlarm"
        android:text="@string/weekend_alarm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_time_weekday" />

    <Button
        android:id="@+id/clear_time_weekend"
        android:layout_width="36dp"
        android:layout_height="39dp"
        android:layout_marginEnd="16dp"
        android:onClick="clearSSAlarm"
        android:text="@string/x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clear_time_weekday" />

    <TextView
        android:id="@+id/weekend_time"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:gravity="center"
        android:text="@string/default_weekend_time"
        app:layout_constraintRight_toLeftOf="@+id/clear_time_weekend"
        app:layout_constraintTop_toBottomOf="@+id/weekday_time" />

    <ImageView
        android:id="@+id/brightness_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_brightness_low_24px"
        app:layout_constraintTop_toBottomOf="@+id/party_mode"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/sun_icon" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/brightness"
        android:layout_width="315dp"
        android:layout_height="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:max="63"
        android:theme="@style/AppTheme"
        app:layout_constraintStart_toEndOf="@+id/brightness_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/brightness_icon"
        app:layout_constraintBottom_toBottomOf="@+id/brightness_icon" />

    <Button
        android:id="@+id/colour"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:onClick="colourPicker"
        android:text="@string/colour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brightness_icon" />

    <TextView
        android:id="@+id/alarms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/alarms"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colour" />
    
    <TextView
        android:id="@+id/router"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/router"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_time_weekend" />

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:onClick="resetRouter"
        android:text="@string/reset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/router" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
